--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         
     </div>
 
+    
+    <hr>
+    <input type="text" id="hash">
+    <button id="gerar-hash">Gerar Hash</button>
+    <output id="resultado-hash"></output>
     <script src="main.js"></script>
 </body>
 </html>
